--- a/public/index.html
+++ b/public/index.html
@@ -56,8 +56,12 @@
               </a>
               <div class="p-6">
                 <h5 class="text-gray-900 text-xl font-medium mb-2">I'm ben</h5>
+                <h5 class="text-gray-900 text-xl font-medium mb-2" id="studentName" style="text-align: center ;">Name: </h5>
+                <h5 class="text-gray-900 text-xl font-medium mb-2" id="studentID" style="text-align: center;">Student ID: </h5>
+                <h5 class="text-gray-900 text-xl font-medium mb-2" id="studentGpa" style="text-align: center;">GPA: </h5>
+                <h5 class="text-gray-900 text-xl font-medium mb-2" id="studentPosition" style="text-align: center;">Position: </h5>
                 <p class="text-gray-700 text-base mb-4">
-                  Thanks
+                  Thanks.
                 </p>
                 <button type="button" class=" inline-block px-6 py-2.5 bg-blue-600 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">Button</button>
               </div>
